--- a/lt/CMakeLists.txt
+++ b/lt/CMakeLists.txt
@@ -6,10 +6,6 @@ file(GLOB cpp_h_files
      "src/*.cpp"
 )
 
-#add_library( stb_image STATIC ../3rd_party/stb/stb_image.h ../3rd_party/stb/stb_image_write.h )
-#target_include_directories( stb_image PUBLIC ../3rd_party/stb)
-#
-#target_link_libraries(virtual_gonio stb_image)
 
 
 add_library(lil_tracer STATIC ${cpp_h_files} )
@@ -18,6 +14,9 @@ target_include_directories(lil_tracer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 
 find_package(glm CONFIG REQUIRED)
 target_link_libraries(lil_tracer PRIVATE glm::glm)
+
+find_package(nlohmann_json CONFIG REQUIRED)
+target_link_libraries(lil_tracer PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
 
 
 
