--- a/lt/CMakeLists.txt
+++ b/lt/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(PROGRAM_NAME lil_tracer)
 
 include_directories(include)
 
@@ -7,16 +8,19 @@ file(GLOB cpp_h_files
 )
 
 
+add_library(${PROGRAM_NAME}  STATIC ${cpp_h_files} )
+target_include_directories(${PROGRAM_NAME}  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../3rd_party/fast_obj)
 
-add_library(lil_tracer STATIC ${cpp_h_files} )
-target_include_directories(lil_tracer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+
+add_library(fast_obj_lib STATIC ../3rd_party/fast_obj/fast_obj.c ../3rd_party/fast_obj/fast_obj.h)
+target_link_libraries(${PROGRAM_NAME}  PRIVATE fast_obj_lib)
 
 find_package(glm CONFIG REQUIRED)
-target_link_libraries(lil_tracer PRIVATE glm::glm)
+target_link_libraries(${PROGRAM_NAME}  PRIVATE glm::glm)
 
 find_package(nlohmann_json CONFIG REQUIRED)
-target_link_libraries(lil_tracer PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+target_link_libraries(${PROGRAM_NAME}  PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
 
-
-
+find_package(embree 3 CONFIG REQUIRED)
+target_link_libraries(${PROGRAM_NAME} PRIVATE embree)
