--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,10 @@ add_subdirectory(lt)
 # ----------------------------------------------------------------------------
 
 add_subdirectory(apps/brdf_viewer)
+
+
+# ----------------------------------------------------------------------------
+# Documentation
+# ----------------------------------------------------------------------------
+
+add_subdirectory(doc)
