--- a/lt/CMakeLists.txt
+++ b/lt/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PROGRAM_NAME lil_tracer)
+set(PROGRAM_NAME lil_tracer_lib)
 
 include_directories(include)
 
@@ -7,10 +7,11 @@ file(GLOB cpp_h_files
      "src/*.cpp"
 )
 
-
 add_library(${PROGRAM_NAME}  STATIC ${cpp_h_files} )
 
-target_include_directories(${PROGRAM_NAME}  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../3rd_party)
+target_include_directories(${PROGRAM_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ../3rd_party)
+set(LIL_TRACER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" PARENT_SCOPE)
+
 
 add_library(fast_obj_lib STATIC ../3rd_party/fast_obj/fast_obj.c ../3rd_party/fast_obj/fast_obj.h)
 target_link_libraries(${PROGRAM_NAME}  PRIVATE fast_obj_lib)
@@ -20,9 +21,8 @@ find_package(miniz CONFIG REQUIRED)
 target_link_libraries(tiny_exr_lib PRIVATE miniz::miniz)
 target_link_libraries(${PROGRAM_NAME}  PRIVATE tiny_exr_lib)
 
-
 find_package(glm CONFIG REQUIRED)
-target_link_libraries(${PROGRAM_NAME} PRIVATE glm::glm)
+target_link_libraries(${PROGRAM_NAME} PUBLIC glm::glm)
 
 find_package(nlohmann_json CONFIG REQUIRED)
 target_link_libraries(${PROGRAM_NAME}  PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
