--- a/apps/renderer/CMakeLists.txt
+++ b/apps/renderer/CMakeLists.txt
@@ -1,20 +1,8 @@
-set(PROGRAM_NAME renderer)
+set(PROGRAM_NAME lil_tracer)
 
 add_executable(${PROGRAM_NAME} main.cpp)
 
-target_link_libraries( ${PROGRAM_NAME} PUBLIC lil_tracer)
-
-target_include_directories(${PROGRAM_NAME}  PUBLIC ../../3rd_party/)
+target_link_libraries(${PROGRAM_NAME} PRIVATE lil_tracer_lib)
 
 find_package(OpenMP REQUIRED)
 target_link_libraries(${PROGRAM_NAME} PRIVATE OpenMP::OpenMP_CXX)
-
-message(${CMAKE_SOURCE_DIR})
-message(${CMAKE_CURRENT_BINARY_DIR})
-
-
-add_custom_command(
-        TARGET ${PROGRAM_NAME}  POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_SOURCE_DIR}/data
-                ${CMAKE_CURRENT_BINARY_DIR}/data)
