--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,5 +33,5 @@ target_link_libraries(${PROGRAM_NAME}  PRIVATE nlohmann_json nlohmann_json::nloh
 find_package(embree 3 CONFIG REQUIRED)
 target_link_libraries(${PROGRAM_NAME} PRIVATE embree)
 
-find_package(TBB CONFIG REQUIRED)
-target_link_libraries(${PROGRAM_NAME} PRIVATE TBB::tbb TBB::tbbmalloc TBB::tbbmalloc_proxy)
+# find_package(TBB CONFIG REQUIRED)
+# target_link_libraries(${PROGRAM_NAME} PRIVATE TBB::tbb TBB::tbbmalloc TBB::tbbmalloc_proxy)
